--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "proprietary",
     "require": {
         "php": ">=8.3",
-        "spryker/gui": "^3.0.0",
+        "spryker/gui": "^3.0.0 || ^4.0.0",
         "spryker/kernel": "^3.30.0",
         "spryker/product": "^6.0.0",
         "spryker/product-alternative": "^1.0.0",
